--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### Maven ###
+
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -10,3 +12,18 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+### Java ###
+
+*.class
+*.log
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
