Add code example for the multi-module project example
Illustrates:
- The effect of the runtime dependency scope
  (i.e. HelloServiceImpl class is not available in compile time to the
  code in the app module)
- Importing dependency management of the spring framework

--- a/multi-module/app/pom.xml
+++ b/multi-module/app/pom.xml
@@ -10,6 +10,7 @@
   <artifactId>multi-module-app</artifactId>
 
   <dependencies>
+    
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>multi-module-api</artifactId>
@@ -18,6 +19,12 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>multi-module-core</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project> 
