--- a/multi-module/core/pom.xml
+++ b/multi-module/core/pom.xml
@@ -10,10 +10,17 @@
   <artifactId>multi-module-core</artifactId>
 
   <dependencies>
+    
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>multi-module-api</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project> 
